--- a/deck.mdx
+++ b/deck.mdx
@@ -1,11 +1,22 @@
+export { default as theme } from 'mdx-deck/themes'
 
-# Sprint `n` Report
-## `date`
+# Sprint Review
 
 ---
 
+import ProgressOverview from 'components/ProgressOverview'
+
+# Overview
+
+<ProgressOverview />
+
+---
+
+import Issue from 'components/Issue'
+
 # Recent Progress
 
-`Epic Name`
+<Issue />
+
 * `Epic 1`
 * `Epic 2`
