POC, was working, need to fix lel

--- a/deck.mdx
+++ b/deck.mdx
@@ -1,4 +1,4 @@
-export { default as theme } from 'mdx-deck/themes'
+export { default as theme } from './theme'
 
 # Sprint Review
 
@@ -6,17 +6,15 @@ export { default as theme } from 'mdx-deck/themes'
 
 import ProgressOverview from 'components/ProgressOverview'
 
-# Overview
+## Issues completed last sprint
 
 <ProgressOverview />
 
 ---
 
-import Issue from 'components/Issue'
-
 # Recent Progress
 
-<Issue />
+Jira Components
 
 * `Epic 1`
 * `Epic 2`
