WIP styles for an Issue grid, added labels, removed old Issue component

--- a/deck.mdx
+++ b/deck.mdx
@@ -1,6 +1,23 @@
 export { default as theme } from './theme'
+import Cover from './layouts/cover'
+
+export default Cover
+
+![MTE App Icon](./img/app-icon.svg)
 
 # Sprint Review
+
+## More to Explore Sprint 14
+
+### July 23 – August 3
+
+---
+
+# Progress Last Sprint
+
+* A list
+* Of things
+* We got done
 
 ---
 
@@ -12,9 +29,8 @@ import ProgressOverview from 'components/ProgressOverview'
 
 ---
 
-# Recent Progress
+# Coming up
 
-Jira Components
-
-* `Epic 1`
-* `Epic 2`
+* A list
+* Of things
+* We're gonna do
